<resources>
    <string name="app_name">EmailAuthApp</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Don\'t have an account? Sign up</string>
    <string name="registration">Registration</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Already have an account? Sign in</string>
    <string name="register">Register</string>
    <string name="hi_user">Hi, User!</string>
    <string name="email_usr">Email address - email</string>
    <string name="id_usr">ID - ID</string>
    <string name="log_out">Log out</string>
    <string name="update_email">Update email</string>
    <string name="update_password">Update password</string>
    <string name="current_email">Current email</string>
    <string name="new_email">New email</string>
    <string name="update">Update</string>
    <string name="new_password">New password</string>
</resources>